// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CellFixedWidth component matches the snapshot 1`] = `
.c2 {
  font-size: 14px;
  padding-left: 40px;
}

.c2:first-child {
  padding-left: 0;
}

.c2::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "FixedWidthCell";
}

yoast-seo.g3[id="c0"] {
  content: "c2,";
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

yoast-seo.g5[id="c1"] {
  content: "c3,";
}

@media screen and ( max-width:1355px ) {
  .c2 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {

}

<span
  className="c0 c1 c2 c3"
>
  This is a cell with a fixed width
</span>
`;

exports[`the CellIcon component matches the snapshot 1`] = `
.c3 {
  font-size: 14px;
  padding-left: 40px;
}

.c3:first-child {
  padding-left: 0;
}

.c3::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "IconCell";
}

yoast-seo.g3[id="c0"] {
  content: "c3,";
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

yoast-seo.g5[id="c1"] {
  content: "c4,";
}

.c5 {
  height: 60px;
}

yoast-seo.g7[id="c2"] {
  content: "c5,";
}

@media screen and ( max-width:1355px ) {
  .c3 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {

}

@media screen and ( max-width:800px ) {
  .c5 {
    height: 48px;
  }
}

<span
  className="c0 c1 c2 c3 c4 c5"
>
  Icon
</span>
`;

exports[`the CellMinWidth component matches the snapshot 1`] = `
.c2 {
  font-size: 14px;
  padding-left: 40px;
}

.c2:first-child {
  padding-left: 0;
}

.c2::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "MinWidthCell";
}

yoast-seo.g3[id="c0"] {
  content: "c2,";
}

.c3 {
  -webkit-flex: 1 0 100px;
  -ms-flex: 1 0 100px;
  flex: 1 0 100px;
}

yoast-seo.g6[id="c1"] {
  content: "c3,";
}

@media screen and ( max-width:1355px ) {
  .c2 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {

}

<span
  className="c0 c1 c2 c3"
>
  This is a call with a min width
</span>
`;

exports[`the CellPrimary component matches the snapshot 1`] = `
.c2 {
  font-size: 14px;
  padding-left: 40px;
}

.c2:first-child {
  padding-left: 0;
}

.c2::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "PrimaryCell";
}

yoast-seo.g3[id="c0"] {
  content: "c2,";
}

.c3 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

yoast-seo.g4[id="c1"] {
  content: "c3,";
}

@media screen and ( max-width:1355px ) {
  .c2 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {

}

@media screen and ( max-width:800px ) {
  .c3 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

<span
  className="c0 c1 c2 c3"
>
  This is a primary cell
</span>
`;

exports[`the CellPrimary with responsiveHeaders matches the snapshot 1`] = `
.c3 {
  font-size: 14px;
  padding-left: 40px;
}

.c3:first-child {
  padding-left: 0;
}

.c3::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "responsiveHeaders";
}

yoast-seo.g3[id="c0"] {
  content: "c3,";
}

.c4 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

yoast-seo.g4[id="c1"] {
  content: "c4,";
}

yoast-seo.g8[id="c2"] {
  content: "c5,";
}

@media screen and ( max-width:1355px ) {
  .c3 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {

}

@media screen and ( max-width:800px ) {
  .c4 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:800px ) {
  .c5::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "responsiveHeaders:";
  }

  .c5 > span {
    line-height: inherit;
  }
}

<span
  className="c0 c1 c2 c3 c4 c5"
>
  This is a primary cell with responsive headers
</span>
`;
